--- a/style.css
+++ b/style.css
@@ -1,12 +1,44 @@
 /* Reset and Common Styles */
-*{
+*
+{
     margin: 0;
     padding: 0;
     outline: none;
     box-sizing: border-box;
     text-decoration: none;
-    list-style: none;
+    list-style-type: none;
     font-family: 'Jost', sans-serif;
     font-weight: 400;
 }
+
+html
+{
+    font-size: 62.5%;
+}
 /* end of Reset and Common Styles */
+
+/* Section 1 */
+.section-1
+{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+        rgba(255,255,255,.2), 
+        rgba(255,255,255,.3)), 
+    url(images/bg.jpg) center 
+    no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-1-heading
+{
+    font-size: 6rem;
+    font-weight: 700;
+    color: #fff;
+    background-color: #e41c6f;
+}
+/* End of Section 1 */
