--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ html
 {
     font-size: 62.5%;
 }
+
+.center
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* end of Reset and Common Styles */
 
 /* Section 1 */
@@ -28,10 +35,7 @@ html
     url(images/bg.jpg) center 
     no-repeat;
     background-size: cover;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .section-1-heading
@@ -84,3 +88,34 @@ html
     letter-spacing: 0.3rem;
 }
 /* End of Section 1 */
+
+/* Navbar */
+.navbar
+{
+    width: 100%;
+    height: 4rem;
+    background-color: #e41c6f;
+    box-shadow: 0.2rem00.2rem 0.5rem #555;
+}
+
+.navbar-link
+{
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #333;
+    margin: 0 3rem;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.navbar-link::before{
+    content: "";
+    width: 130%;
+    height: 0.2rem;
+    background-color: #fff;
+    position: absolute;
+    right: -15%;
+    bottom: 0.3rem;
+}
+/* End of Navbar */
