--- a/style.css
+++ b/style.css
@@ -199,5 +199,29 @@ html
 {
     width: 100%;
     height: 30vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.services
+{
+    text-align: center;
+}
+
+.service i
+{
+    font-size: 10rem;
+    color: #888;
+    margin-bottom: 2rem;
+    text-shadow: 0.1rem 0.1rem 0.5rem #555;
+}
+
+.service h2
+{
+    font-size: 2rem;
+    color: #fff;
+    background-color: #777;
+    width: 25rem;
 }
 /* End of Section 2 */
