--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ html
     justify-content: center;
     align-items: center;
 }
+
+.section-heading
+{
+    font-size: 5rem;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    margin-bottom: 15rem;
+    border-bottom: 0.3rem solid #333;
+    text-shadow: 0.2rem 0.2rem 0.5rem #555;
+}
 /* end of Reset and Common Styles */
 
 /* Section 1 */
@@ -145,16 +156,6 @@ html
     align-items: center;
 }
 
-.section-2-heading
-{
-    font-size: 5rem;
-    color: #333;
-    text-transform: uppercase;
-    letter-spacing: 0.5rem;
-    margin-bottom: 15rem;
-    border-bottom: 0.3rem solid #333;
-    text-shadow: 0.2rem 0.2rem 0.5rem #555;
-}
 
 .progress-bars-wrapper
 {
@@ -234,3 +235,69 @@ html
     box-shadow: 0.2rem 0.2rem 0.5rem #555;
 }
 /* End of Section 2 */
+
+/* Section 3 */
+.section-3
+{
+    width: 100%;
+    height: 100%;
+    padding: 10rem 0;
+    background-color: #eef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projects-wrapper
+{
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+.project
+{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    background-color: #fff;
+    box-shadow: 0.3rem 0.3rem 0.5rem #777;
+}
+
+.project-text
+{
+    text-align: center;
+    letter-spacing: 0.1rem;
+}
+
+.project-name
+{
+    font-size: 3rem;
+    font-weight: 700;
+    color: #333;
+    text-transform: capitalize;
+}
+
+.project-technologies
+{
+    font-size: 1.8rem;
+    color: #e41c6f;
+}
+
+.project-img
+{
+    width: 40rem;
+}
+
+.project-link
+{
+    font-size: 2rem;
+    font-weight: 500;
+    color: #333;
+    letter-spacing: 0.1rem;
+    border: 0.3rem solid #e41c6f;
+    padding: 0 1rem;
+    background-color: #fff;
+}
+/* End of Section 3 */
