--- a/style.css
+++ b/style.css
@@ -263,12 +263,22 @@ html
     margin: 1rem;
     background-color: #fff;
     box-shadow: 0.3rem 0.3rem 0.5rem #777;
+    position: relative;
+    overflow: hidden;
 }
 
 .project-text
 {
     text-align: center;
     letter-spacing: 0.1rem;
+    position: absolute;
+    top: -10rem;
+    transition: top 0.3s;
+}
+
+.project:hover .project-text
+{
+    top: 5rem;
 }
 
 .project-name
@@ -288,6 +298,12 @@ html
 .project-img
 {
     width: 40rem;
+    transition: opacity 0.3s;
+}
+
+.project:hover .project-img
+{
+    opacity: 0.2;
 }
 
 .project-link
@@ -299,5 +315,13 @@ html
     border: 0.3rem solid #e41c6f;
     padding: 0 1rem;
     background-color: #fff;
+    position: absolute;
+    bottom: -5rem;
+    transition: bottom 0.3s;
+}
+
+.project:hover .project-link
+{
+    bottom: 5rem;
 }
 /* End of Section 3 */
