--- a/style.css
+++ b/style.css
@@ -334,3 +334,29 @@ html
     transition: bottom 0.3s 0.2s;
 }
 /* End of Section 3 */
+
+/* Section 4 */
+.section-4
+{
+    width: 100%;
+    height: 70vh;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.section-4-heading
+{
+    color: #fff;
+    box-shadow: none;
+    border-color: #fff;
+}
+
+.contact-form
+{
+    width: 50rem;
+    flex-direction: column;
+}
+/* End of Section 4 */
