--- a/style.css
+++ b/style.css
@@ -359,4 +359,32 @@ html
     width: 50rem;
     flex-direction: column;
 }
+
+.contact-form input,
+.contact-form textarea
+{
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    background-color: #eef;
+    font-size: 1.5rem;
+    border: 0.2rem solid #e41c6f;
+    color: #555;
+}
+
+.contact-form textarea
+{
+    height: 10rem;
+    max-height: 15rem;
+    max-width: 100%;
+}
+
+.contact-form .contact-form-btn
+{
+    background-color: #e41c6f;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1rem;
+    cursor: pointer;
+}
 /* End of Section 4 */
