--- a/style.css
+++ b/style.css
@@ -107,6 +107,14 @@ html
     height: 4rem;
     background-color: #e41c6f;
     box-shadow: 0.2rem00.2rem 0.5rem #555;
+    position: absolute;
+    z-index: 300;
+}
+
+.sticky
+{
+    position: fixed;
+    top: 0;
 }
 
 .navbar-link
