--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ html
     width: 100%;
     height: 4rem;
     background-color: #e41c6f;
-    box-shadow: 0.2rem00.2rem 0.5rem #555;
+    box-shadow: 0.2rem 0.2rem 0.5rem #555;
     position: absolute;
     z-index: 300;
 }
@@ -209,7 +209,7 @@ html
 
 .progress-percent
 {
-    width:90%;
+    width: 0;
     height: 100%;
     background-color: #e41c6f;
     border-radius: 00.3rem;
